# rcssserver

./: CMakeLists.txt  EMBEDDED_SIMULATOR_INTERFACE.md  build_pip_package.sh  configure.ac  demo.py  pyproject.toml  setup_macos_build_env.sh
python/rcssserver_embedded/: __init__.py
rcss/clang/: CMakeLists.txt
src/: CMakeLists.txt  Makefile.am  stadium.cpp  stadium.h  team.cpp  team.h
src/embedded_simulator/: embeddedsimulator.cpp  embeddedsimulator.h  embeddedsimulator_smoke.cpp  pybind_embeddedsimulator.cpp
