[build-system]
requires = [
  "scikit-build-core>=0.10",
  "pybind11>=3.0",
  "numpy",
]
build-backend = "scikit_build_core.build"

[project]
name = "rcssserver-embedded"
version = "0.1.0"
description = "Embedded Python bindings for the RoboCup Soccer Simulator server"
readme = "EMBEDDED_SIMULATOR_INTERFACE.md"
requires-python = ">=3.11"

[tool.scikit-build]
cmake.version = ">=3.15"
wheel.packages = ["python/rcssserver_embedded"]
cmake.build-type = "Release"
sdist.include = [
  "CMakeLists.txt",
  "config.h.cmake",
  "python/**",
  "src/**",
  "rcss/**",
  "EMBEDDED_SIMULATOR_INTERFACE.md",
  "demo.py",
  "build_pip_package.sh",
]

[tool.scikit-build.cmake.define]
RCSSSERVER_PYTHON_PACKAGE_ONLY = "ON"
